--- a/HTML:CSS:JS/forms.html
+++ b/HTML:CSS:JS/forms.html
@@ -53,17 +53,17 @@
             </div>
         </div>
     </nav>
-    <form style="margin: 24px;">
+    <form style="margin: 24px;" id="myForm">
         <div class="row mb-3">
-            <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+            <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3">
+                <input type="email" class="form-control" id="inputEmail">
             </div>
         </div>
         <div class="row mb-3">
-            <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+            <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3">
+                <input type="password" class="form-control" id="inputPassword">
             </div>
         </div>
         <fieldset class="row mb-3">
@@ -102,9 +102,9 @@
             </div>
         </div>
         <button type="submit" class="btn btn-primary">Sign in</button>
-        <button class="btn btn-primary" id="clearForm">Clear Form</button>
     </form>
     <button class="btn btn-primary" id="bgColor">Change BG Color</button>
+    <button class="btn btn-primary" id="clearForm">Clear Form</button>
     <script src="/HTML:CSS:JS/app.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
